fixed isoptope spacing issues and some UI tweaks

--- a/css/main.css
+++ b/css/main.css
@@ -2962,6 +2962,7 @@ header .logo a img {
 
 .contact-info h5 {
 	color: #FF0077;
+	font-family: 'poppins-medium';
 }
 
 .contact-info p {
@@ -3249,7 +3250,7 @@ footer .copyright span:last-child::after {
 
 .element-item {
 	position: relative;
-	width: calc(33% - 20px);
+	width: calc(33% - 10px);
 	height: 300px;
 	background: #c3d8df;
 	overflow: hidden;
@@ -3267,7 +3268,6 @@ footer .copyright span:last-child::after {
 .portfolio-item {
 	position: relative;
 	overflow: hidden;
-	margin: 10px;
 	border-radius: 7px;
 }
 
@@ -3363,9 +3363,19 @@ footer .copyright span:last-child::after {
 	bottom: 0;
 }
 
+.elements-wrapper {
+	display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
 @media (min-width: 575px) and (max-width: 1200px) {
 	.element-item {
-		width: calc(50% - 20px);
+		width: calc(50% - 10px);
 	}
 }
 
@@ -3373,6 +3383,6 @@ footer .copyright span:last-child::after {
 	.element-item {
 		width: 100%;
 		margin: 0;
-		margin-bottom: 20px;
+		margin-bottom: 10px;
 	}
 }
